--- a/style/main.css
+++ b/style/main.css
@@ -99,32 +99,15 @@ body {
     color: var(--txt-light);
 }
 
-/* === HEADER === */
-
-header {
-    width: 100%;
-    border-bottom: 3px solid var(--act);
-    padding: 3em;
-    text-align: center;
-}
-
-header h1 {
-    font-family: var(--font-act);
-    font-weight: 700;
-}
-
-header p {
-    font-style: italic;
-    font-family: var(--font-main);
+html {
+    scrollbar-gutter: stable;
 }
 
 /* === MAIN === */
 
 main {
     max-width: 50em;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
+    margin: auto;
     padding: 1em;
 }
 
@@ -232,22 +215,4 @@ a.btn:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-/* === FOOTER === */
-
-footer {
-    width: 100vw;
-    background-color: var(--bg-dark);
-    color: var(--txt-dark);
-    height: 25vh;
-    padding: 2rem;
-    justify-items: center;
-    margin-top: 25vh;
-}
-
-footer a {
-    color: var(--act);
-    text-align: center;
-    text-decoration: none;
 }
